feat: load market data with funds